[gd_scene load_steps=18 format=3 uid="uid://b6r2fby64qxsp"]

[ext_resource type="Script" path="res://PlayerSnowball.gd" id="1_bh06k"]
[ext_resource type="Script" path="res://main.gd" id="1_n4nh7"]
[ext_resource type="Texture2D" uid="uid://d0o7t1mq37q1k" path="res://snow.png" id="2_rfh8k"]
[ext_resource type="Texture2D" uid="uid://dyn8iumrkjbbh" path="res://testTree.png" id="3_2bpv4"]
[ext_resource type="Script" path="res://Obstacle.gd" id="3_chjlc"]
[ext_resource type="Texture2D" uid="uid://dk86fa2hvpf7p" path="res://mom.png" id="5_52m4f"]
[ext_resource type="Texture2D" uid="uid://gkbwnon2ps1t" path="res://fence.png" id="7_o20kf"]
[ext_resource type="PackedScene" uid="uid://ya537dogkk20" path="res://end_game_screen.tscn" id="10_01gf3"]
[ext_resource type="MeshLibrary" uid="uid://bsymydnpdyudy" path="res://SnoballMeshLib.tres" id="11_45vcm"]
[ext_resource type="Script" path="res://ProgressBar.gd" id="12_gw78r"]

[sub_resource type="SphereShape3D" id="SphereShape3D_46qb7"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_esa0y"]

[sub_resource type="QuadMesh" id="QuadMesh_meims"]
material = SubResource("StandardMaterial3D_esa0y")

[sub_resource type="SphereMesh" id="SphereMesh_rpllk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjkom"]
albedo_texture = ExtResource("2_rfh8k")

[sub_resource type="BoxShape3D" id="BoxShape3D_mt07d"]
size = Vector3(2, 6, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_byxke"]
size = Vector3(1, 3, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_n4nh7")

[node name="GameWorld" type="Node3D" parent="."]

[node name="PlayerSnowball" type="AnimatableBody3D" parent="GameWorld"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.0494576, 0)
sync_to_physics = false
script = ExtResource("1_bh06k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/PlayerSnowball"]
shape = SubResource("SphereShape3D_46qb7")

[node name="Camera3D" type="Camera3D" parent="GameWorld/PlayerSnowball"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 5.02013)

[node name="TimeLabel" type="Label3D" parent="GameWorld/PlayerSnowball/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.605, 2.465, -3.544)
render_priority = 3
outline_render_priority = 2
text = "Time: "
font_size = 64
horizontal_alignment = 0

[node name="CPUParticles3D" type="CPUParticles3D" parent="GameWorld/PlayerSnowball"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
amount = 100
lifetime = 2.0
preprocess = 2.0
randomness = 1.0
mesh = SubResource("QuadMesh_meims")
emission_shape = 3
emission_box_extents = Vector3(20, 1, 5)
gravity = Vector3(0, -5, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1

[node name="Snowball" type="MeshInstance3D" parent="GameWorld/PlayerSnowball"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.95, 0)
mesh = SubResource("SphereMesh_rpllk")
surface_material_override/0 = SubResource("StandardMaterial3D_xjkom")

[node name="Obstacle" type="StaticBody3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -3)
script = ExtResource("3_chjlc")

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Obstacle"]
render_priority = 1
texture = ExtResource("3_2bpv4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Obstacle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_mt07d")

[node name="Obstacle3" type="StaticBody3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 3, -3)
script = ExtResource("3_chjlc")

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Obstacle3"]
render_priority = 1
texture = ExtResource("3_2bpv4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Obstacle3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_mt07d")

[node name="Obstacle4" type="StaticBody3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 3, -5)
script = ExtResource("3_chjlc")

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Obstacle4"]
render_priority = 1
texture = ExtResource("3_2bpv4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Obstacle4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_mt07d")

[node name="Obstacle2" type="StaticBody3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, -1)
script = ExtResource("3_chjlc")

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Obstacle2"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("5_52m4f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Obstacle2"]
shape = SubResource("BoxShape3D_byxke")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 8, 0)

[node name="Fences" type="Node3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Obstacle5" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -3)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle5"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle5"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle6" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -3)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle6"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle6"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle7" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -3)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle7"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle7"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle8" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, 0, -3)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle8"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle8"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle9" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.1, 0, -2.2)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle9"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle9"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle10" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.1, 0, -0.7)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle10"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle10"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle11" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.1, 0, 0.8)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle11"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle11"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle12" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.1, 0, 2.3)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle12"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle12"]
shape = SubResource("BoxShape3D_byxke")

[node name="Obstacle13" type="StaticBody3D" parent="GameWorld/Fences"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.1, 0, 3.8)
script = ExtResource("3_chjlc")
size = 0.1
growth_amount = 0.05

[node name="Sprite3D" type="Sprite3D" parent="GameWorld/Fences/Obstacle13"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
flip_h = true
render_priority = 1
texture = ExtResource("7_o20kf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameWorld/Fences/Obstacle13"]
shape = SubResource("BoxShape3D_byxke")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(0, 1, 0, 1)
offset_left = 1090.0
offset_top = 115.0
offset_right = 1137.0
offset_bottom = 500.0
value = 50.0
fill_mode = 3
script = ExtResource("12_gw78r")

[node name="EndGameScreen" parent="." instance=ExtResource("10_01gf3")]
visible = false

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("11_45vcm")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(1, 6, 0, 0, 6, 0, 65535, 6, 0, 65534, 6, 0, 65533, 6, 0, 65534, 5, 0, 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 2, 6, 0, 65533, 5, 0, 6, 65530, 0, 7, 65530, 0, 8, 65530, 0, 8, 65531, 0, 8, 65532, 0, 7, 65533, 0, 6, 65533, 0, 5, 65533, 0, 4, 65533, 0, 3, 65533, 0, 3, 65532, 0, 4, 65532, 0, 7, 7, 0, 7, 5, 0, 7, 4, 0, 7, 3, 0, 6, 3, 0, 6, 4, 0, 5, 4, 0, 4, 4, 0, 3, 4, 0, 2, 4, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65534, 4, 0, 4, 3, 0, 5, 3, 0, 65533, 4, 0, 3, 5, 0, 4, 5, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 3, 2, 0, 4, 1, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 65535, 1, 0, 65535, 2, 0, 65534, 2, 0, 65533, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 4, 2, 0, 3, 65534, 0, 2, 65533, 0, 1, 65533, 0, 0, 65533, 0, 65535, 65534, 0, 65534, 65534, 0, 65533, 65534, 0, 65532, 65534, 0, 65532, 65535, 0, 65532, 0, 0, 65533, 1, 0, 65534, 1, 0, 65534, 0, 0, 11, 7, 0, 65524, 65528, 0, 65524, 65529, 0, 65524, 65530, 0, 65524, 65531, 0, 65524, 65532, 0, 65524, 65533, 0, 65524, 65534, 0, 65524, 65535, 0, 65524, 0, 0, 65524, 1, 0, 65524, 2, 0, 65524, 3, 0, 65524, 4, 0, 65524, 5, 0, 65524, 6, 0, 65524, 7, 0, 65524, 8, 0, 65524, 9, 0, 65525, 65528, 0, 65525, 65529, 0, 65525, 65530, 0, 65525, 65531, 0, 65525, 65532, 0, 65525, 65533, 0, 65525, 65534, 0, 65525, 65535, 0, 65525, 0, 0, 65525, 1, 0, 65525, 2, 0, 65525, 3, 0, 65525, 4, 0, 65525, 5, 0, 65525, 6, 0, 65525, 7, 0, 65525, 8, 0, 65525, 9, 0, 65526, 65528, 0, 65526, 65529, 0, 65526, 65530, 0, 65526, 65531, 0, 65526, 65532, 0, 65526, 65533, 0, 65526, 65534, 0, 65526, 65535, 0, 65526, 0, 0, 65526, 1, 0, 65526, 2, 0, 65526, 3, 0, 65526, 4, 0, 65526, 5, 0, 65526, 6, 0, 65526, 7, 0, 65526, 8, 0, 65526, 9, 0, 65527, 65528, 0, 65527, 65529, 0, 65527, 65530, 0, 65527, 65531, 0, 65527, 65532, 0, 65527, 65533, 0, 65527, 65534, 0, 65527, 65535, 0, 65527, 0, 0, 65527, 1, 0, 65527, 2, 0, 65527, 3, 0, 65527, 4, 0, 65527, 5, 0, 65527, 6, 0, 65527, 7, 0, 65527, 8, 0, 65527, 9, 0, 65528, 65528, 0, 65528, 65529, 0, 65528, 65530, 0, 65528, 65531, 0, 65528, 65532, 0, 65528, 65533, 0, 65528, 65534, 0, 65528, 65535, 0, 65528, 0, 0, 65528, 1, 0, 65528, 2, 0, 65528, 3, 0, 65528, 4, 0, 65528, 5, 0, 65528, 6, 0, 65528, 7, 0, 65528, 8, 0, 65528, 9, 0, 65529, 65528, 0, 65529, 65529, 0, 65529, 65530, 0, 65529, 65531, 0, 65529, 65532, 0, 65529, 65533, 0, 65529, 65534, 0, 65529, 65535, 0, 65529, 0, 0, 65529, 1, 0, 65529, 2, 0, 65529, 3, 0, 65529, 4, 0, 65529, 5, 0, 65529, 6, 0, 65529, 7, 0, 65529, 8, 0, 65529, 9, 0, 65530, 65528, 0, 65530, 65529, 0, 65530, 65530, 0, 65530, 65531, 0, 65530, 65532, 0, 65530, 65533, 0, 65530, 65534, 0, 65530, 65535, 0, 65530, 0, 0, 65530, 1, 0, 65530, 2, 0, 65530, 3, 0, 65530, 4, 0, 65530, 5, 0, 65530, 6, 0, 65530, 7, 0, 65530, 8, 0, 65530, 9, 0, 65531, 65528, 0, 65531, 65529, 0, 65531, 65530, 0, 65531, 65531, 0, 65531, 65532, 0, 65531, 65533, 0, 65531, 65534, 0, 65531, 65535, 0, 65531, 0, 0, 65531, 1, 0, 65531, 2, 0, 65531, 3, 0, 65531, 4, 0, 65531, 5, 0, 65531, 6, 0, 65531, 7, 0, 65531, 8, 0, 65531, 9, 0, 65532, 65528, 0, 65532, 65529, 0, 65532, 65530, 0, 65532, 65531, 0, 65532, 65532, 0, 65532, 65533, 0, 65532, 1, 0, 65532, 2, 0, 65532, 3, 0, 65532, 4, 0, 65532, 5, 0, 65532, 6, 0, 65532, 7, 0, 65532, 8, 0, 65532, 9, 0, 65533, 65528, 0, 65533, 65529, 0, 65533, 65530, 0, 65533, 65531, 0, 65533, 65532, 0, 65533, 65533, 0, 65533, 65535, 0, 65533, 0, 0, 65533, 7, 0, 65533, 8, 0, 65533, 9, 0, 65534, 65528, 0, 65534, 65529, 0, 65534, 65530, 0, 65534, 65531, 0, 65534, 65532, 0, 65534, 65533, 0, 65534, 65535, 0, 65534, 7, 0, 65534, 8, 0, 65534, 9, 0, 65535, 65528, 0, 65535, 65529, 0, 65535, 65530, 0, 65535, 65531, 0, 65535, 65532, 0, 65535, 65533, 0, 65535, 65535, 0, 65535, 0, 0, 65535, 7, 0, 65535, 8, 0, 65535, 9, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65534, 0, 1, 65535, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 2, 65528, 0, 2, 65529, 0, 2, 65530, 0, 2, 65531, 0, 2, 65532, 0, 2, 65534, 0, 2, 65535, 0, 2, 1, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 3, 65528, 0, 3, 65529, 0, 3, 65530, 0, 3, 65531, 0, 3, 65535, 0, 3, 1, 0, 3, 6, 0, 3, 7, 0, 3, 8, 0, 3, 9, 0, 4, 65528, 0, 4, 65529, 0, 4, 65530, 0, 4, 65531, 0, 4, 65534, 0, 4, 65535, 0, 4, 6, 0, 4, 7, 0, 4, 8, 0, 4, 9, 0, 5, 65528, 0, 5, 65529, 0, 5, 65530, 0, 5, 65531, 0, 5, 65532, 0, 5, 65534, 0, 5, 65535, 0, 5, 0, 0, 5, 1, 0, 5, 2, 0, 5, 5, 0, 5, 6, 0, 5, 7, 0, 5, 8, 0, 5, 9, 0, 6, 65528, 0, 6, 65529, 0, 6, 65531, 0, 6, 65532, 0, 6, 65534, 0, 6, 65535, 0, 6, 0, 0, 6, 1, 0, 6, 2, 0, 6, 5, 0, 6, 6, 0, 6, 7, 0, 6, 8, 0, 6, 9, 0, 7, 65528, 0, 7, 65529, 0, 7, 65531, 0, 7, 65532, 0, 7, 65534, 0, 7, 65535, 0, 7, 0, 0, 7, 1, 0, 7, 2, 0, 7, 6, 0, 7, 8, 0, 7, 9, 0, 8, 65528, 0, 8, 65529, 0, 8, 65533, 0, 8, 65534, 0, 8, 65535, 0, 8, 0, 0, 8, 1, 0, 8, 2, 0, 8, 3, 0, 8, 4, 0, 8, 5, 0, 8, 6, 0, 8, 7, 0, 8, 8, 0, 8, 9, 0, 9, 65528, 0, 9, 65529, 0, 9, 65530, 0, 9, 65531, 0, 9, 65532, 0, 9, 65533, 0, 9, 65534, 0, 9, 65535, 0, 9, 0, 0, 9, 1, 0, 9, 2, 0, 9, 3, 0, 9, 4, 0, 9, 5, 0, 9, 6, 0, 9, 7, 0, 9, 8, 0, 9, 9, 0, 10, 65528, 0, 10, 65529, 0, 10, 65530, 0, 10, 65531, 0, 10, 65532, 0, 10, 65533, 0, 10, 65534, 0, 10, 65535, 0, 10, 0, 0, 10, 1, 0, 10, 2, 0, 10, 3, 0, 10, 4, 0, 10, 5, 0, 10, 6, 0, 10, 7, 0, 10, 8, 0, 10, 9, 0, 11, 65528, 0, 11, 65529, 0, 11, 65530, 0, 11, 65531, 0, 11, 65532, 0, 11, 65533, 0, 11, 65534, 0, 11, 65535, 0, 11, 0, 0, 11, 1, 0, 11, 2, 0, 11, 3, 0, 11, 4, 0, 11, 5, 0, 11, 6, 0, 11, 8, 0, 11, 9, 0, 12, 65528, 0, 12, 65529, 0, 12, 65530, 0, 12, 65531, 0, 12, 65532, 0, 12, 65533, 0, 12, 65534, 0, 12, 65535, 0, 12, 0, 0, 12, 1, 0, 12, 2, 0, 12, 3, 0, 12, 4, 0, 12, 5, 0, 12, 6, 0, 12, 7, 0, 12, 8, 0, 12, 9, 0, 13, 65528, 0, 13, 65529, 0, 13, 65530, 0, 13, 65531, 0, 13, 65532, 0, 13, 65533, 0, 13, 65534, 0, 13, 65535, 0, 13, 0, 0, 13, 1, 0, 13, 2, 0, 13, 3, 0, 13, 4, 0, 13, 5, 0, 13, 6, 0, 13, 7, 0, 13, 8, 0, 13, 9, 0, 14, 65528, 0, 14, 65529, 0, 14, 65530, 0, 14, 65531, 0, 14, 65532, 0, 14, 65533, 0, 14, 65534, 0, 14, 65535, 0, 14, 0, 0, 14, 1, 0, 14, 2, 0, 14, 3, 0, 14, 4, 0, 14, 5, 0, 14, 6, 0, 14, 7, 0, 14, 8, 0, 14, 9, 0)
}
